{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "39ece897-2a27-417c-9b5c-c1640bfb3b79",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "4ea5e1a3-65ba-4c6b-85be-1fe7765772ec",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "f80ff3ab-4b34-4a03-aa48-9077213cb06c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosion",
                    "type": "PassThrough",
                    "id": "5c1a94e1-da98-47cf-85cd-3dd36e9db467",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ae7a9ab-26a7-4eae-9299-2a7850b232a1",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94d870c8-52ca-4a91-8b94-0a8799ec416f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53fc530a-0bb6-4c2d-a286-458db9eb63af",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosion",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}